<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.4.3</version>
        <relativePath/>
    </parent>
    <groupId>com.zy</groupId>
    <artifactId>java-web-zy</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>java-web-zy</name>
    <description>Demo project for Spring Boot</description>

    <properties>
        <java.version>1.8</java.version>
        <spring.cloud.dependencies.version>2020.0.5</spring.cloud.dependencies.version>
        <mysql.connector.java.version>5.1.47</mysql.connector.java.version>
        <mybatis.spring.boot.starter.version>2.2.0</mybatis.spring.boot.starter.version>
        <druid.spring.boot.starter.version>1.1.10</druid.spring.boot.starter.version>
        <pagehelper.spring.boot.starter.version>1.4.7</pagehelper.spring.boot.starter.version>
        <lombok.version>1.18.18</lombok.version>
        <log4j2.version>2.25.3</log4j2.version>
        <swagger.spring.boot.starter.version>1.9.1.RELEASE</swagger.spring.boot.starter.version>
        <validation.api.version>1.1.0.Final</validation.api.version>
        <jackson.version>2.12.0</jackson.version>
        <commons.lang3.version>3.11</commons.lang3.version>
        <poi.version>5.0.0</poi.version>
        <jasypt.spring.boot.starter.version>3.0.5</jasypt.spring.boot.starter.version>
        <redisson.spring.boot.starter.version>3.15.6</redisson.spring.boot.starter.version>
    </properties>

    <!--spring cloud dependencies-->
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring.cloud.dependencies.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
            <exclusions>
                <!-- 排除logback依赖 -->
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <!--actuator-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>

        <!--bootstrap-->
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-bootstrap</artifactId>
        </dependency>

        <!--mysql连接驱动-->
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>${mysql.connector.java.version}</version>
        </dependency>

        <!--spring-boot-mybatis-->
        <dependency>
            <groupId>org.mybatis.spring.boot</groupId>
            <artifactId>mybatis-spring-boot-starter</artifactId>
            <version>${mybatis.spring.boot.starter.version}</version>
        </dependency>

        <!--spring-boot-druid-->
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>druid-spring-boot-starter</artifactId>
            <version>${druid.spring.boot.starter.version}</version>
        </dependency>

        <!--分页插件-->
        <dependency>
            <groupId>com.github.pagehelper</groupId>
            <artifactId>pagehelper-spring-boot-starter</artifactId>
            <version>${pagehelper.spring.boot.starter.version}</version>
        </dependency>

        <!--mybatis-plus  3.5.5-->
<!--        <dependency>-->
<!--            <groupId>com.baomidou</groupId>-->
<!--            <artifactId>mybatis-plus-boot-starter</artifactId>-->
<!--            <version>${mybatis.plus.boot.starter.version}</version>-->
<!--        </dependency>-->

        <!--Slf4j-->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
        </dependency>

        <!-- log4j2 -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j2.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j2.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>${log4j2.version}</version>
        </dependency>

        <!--swagger-->
        <dependency>
            <groupId>com.spring4all</groupId>
            <artifactId>swagger-spring-boot-starter</artifactId>
            <version>${swagger.spring.boot.starter.version}</version>
        </dependency>

        <!--validation-api-->
        <dependency>
            <groupId>javax.validation</groupId>
            <artifactId>validation-api</artifactId>
            <version>${validation.api.version}</version>
        </dependency>

        <!--jackson-->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>${jackson.version}</version>
        </dependency>

        <!--commons-lang-->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons.lang3.version}</version>
        </dependency>

        <!--poi-->
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi</artifactId>
            <version>${poi.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>${poi.version}</version>
        </dependency>

        <!--jasypt-->
        <dependency>
            <groupId>com.github.ulisesbocchio</groupId>
            <artifactId>jasypt-spring-boot-starter</artifactId>
            <version>${jasypt.spring.boot.starter.version}</version>
        </dependency>

        <!-- Spring Boot Redis （lettuce）-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-redis</artifactId>
        </dependency>
        <!-- redis连接池（适用于jedis、lettuce） -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-pool2</artifactId>
        </dependency>

        <!--Redisson-->
        <dependency>
            <groupId>org.redisson</groupId>
            <artifactId>redisson-spring-boot-starter</artifactId>
            <version>${redisson.spring.boot.starter.version}</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <!-- 配置JVM参数，本地调试 -->
                    <jvmArguments>
                        <!--初始堆内存-XX:InitialHeapSize-->
                        -Xms8G
                        <!--最大堆内存-XX:MaxHeapSize-->
                        -Xmx8G
                        <!--新生代内存-XX:MaxNewSize=-XX:NewSize-->
                        -Xmn4G
                        <!--线程栈大小-XX:ThreadStackSize-->
                        -Xss2M
                        <!--元空间内存-->
                        -XX:MetaspaceSize=256m
                        <!--元空间最大内存-->
                        -XX:MaxMetaspaceSize=512m
                        <!--OOM时自动生成堆转储文件-->
                        -XX:+HeapDumpOnOutOfMemoryError
                        <!--堆转储文件的路径-->
                        -XX:HeapDumpPath=E:/Java/jvm-dump/oom_dump.hprof
                        <!--young gc/full gc发生时，输出详细的内存回收日志-->
                        -XX:+PrintGCDetails
                        <!--输出GC发生时JVM已经启动的时间，单位秒-->
                        -XX:+PrintGCTimeStamps
                        <!--输出GC发生的具体时间-->
                        -XX:+PrintGCDateStamps
                        <!--指定GC日志文件的路径-->
                        -Xloggc:./gc.log
                        <!--指定垃圾回收器-->
                        <!-- -XX:+UseG1GC-->
                    </jvmArguments>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
